--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,10 +1,10 @@
-p{
+p {
     margin: 0;
     padding: 0;
 }
 
 /* boton amarillo inscribeme */
-.btnPrimary{
+.btnPrimary {
     background: #FFC80A;
     border-radius: 8px;
     border-radius: 8px;
@@ -13,7 +13,7 @@ p{
     align-items: center;
 }
 
-.btnPrimary p{
+.btnPrimary p {
     font-size: 16px;
     color: #000000;
     letter-spacing: 3.2px;
@@ -21,7 +21,7 @@ p{
     text-transform: uppercase;
 }
 
-.btnInscribeme{
+.btnInscribeme {
     width: 202px;
     height: 47px;
     background: #FFFFFF;
@@ -32,24 +32,24 @@ p{
     align-items: center;
 }
 
-.btnInscribeme p{
+.btnInscribeme p {
     font-family: Montserrat-Regular;
     font-size: 14px;
     color: #000000;
 }
 
-.btnImage{
-    background: url(../../assets/img/Boton_DUBAI.jpg);
+.btnImage {
     /* opacity: 0.43; */
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px
+    border-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .btnImage p {
     font-size: 20px;
-color: #FFFFFF;
-letter-spacing: 4px;
+    color: #FFFFFF;
+    letter-spacing: 4px;
 
 }
