--- a/src/components/Organisms/Card/Card.css
+++ b/src/components/Organisms/Card/Card.css
@@ -4,9 +4,10 @@
     background: #FFFFFF;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-    display:flex;
-    flex-direction:column;
-    padding: 24px 36px
+    display: flex;
+    flex-direction: column;
+    padding: 24px 36px;
+    margin: 23px
 }
 
 .contentOffer {
