--- a/src/components/Organisms/Card/Card.css
+++ b/src/components/Organisms/Card/Card.css
@@ -13,3 +13,14 @@
 .contentOffer {
     flex: 1 1 auto;
 }
+
+.cardFacility {
+    width: 295px;
+    height: 325px;
+    background: #FFFFFF;
+    border: 1px solid #000;
+    border-radius: 18px;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 36px;
+}
