--- a/src/components/Molecules/Card/BodyCard/BodyCard.css
+++ b/src/components/Molecules/Card/BodyCard/BodyCard.css
@@ -3,3 +3,12 @@
     justify-content: center;
     width: 100%;
 }
+
+.bodyCardCarrousel {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    margin-bottom: 29px;
+}
