--- a/src/components/Molecules/Card/HeaderCard/HeaderCard.css
+++ b/src/components/Molecules/Card/HeaderCard/HeaderCard.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 29px;
+    margin-top: 29px;
     /* border-bottom: 2px solid #ffc80a; */
     /* box-shadow: 0px 50px 3px -50px magenta; */
 
