--- a/src/components/Molecules/Card/BodyCard/BodyCard.css
+++ b/src/components/Molecules/Card/BodyCard/BodyCard.css
@@ -12,3 +12,21 @@
     text-align: center;
     margin-bottom: 29px;
 }
+
+.bodyCardFacility {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    margin-bottom: 29px;
+}
+
+.bodyCardRequisite {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    margin-bottom: 29px;
+}
