--- a/src/components/Molecules/Card/HeaderCard/HeaderCard.css
+++ b/src/components/Molecules/Card/HeaderCard/HeaderCard.css
@@ -16,7 +16,7 @@
     flex-direction: column
 }
 
-.headerCardCarrousel{
+.headerCardCarrousel {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,4 +26,10 @@
     /* box-shadow: 0px 50px 3px -50px magenta; */
 
 }
-  
+
+.headerCardRequisites {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column
+}
