--- a/src/components/Organisms/Card/Card.css
+++ b/src/components/Organisms/Card/Card.css
@@ -24,8 +24,7 @@
 }
 
 .cardRequisite {
-    width: 295px;
-    height: 325px;
+    min-height: 325px;
     background: #FFFFFF;
     display: flex;
     flex-direction: column;
