--- a/src/components/Organisms/Card/Card.css
+++ b/src/components/Organisms/Card/Card.css
@@ -1,6 +1,6 @@
 .cardOffer {
     /* width: 276px; */
-    min-height: 371px;
+    height: 100%;
     background: #FFFFFF;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
     border-radius: 8px;
@@ -14,7 +14,7 @@
 }
 
 .cardFacility {
-    min-height: 325px;
+    height: 90%;
     background: #FFFFFF;
     border: 1px solid #000;
     border-radius: 18px;
@@ -24,7 +24,7 @@
 }
 
 .cardRequisite {
-    min-height: 225px;
+    height: 90%;
     background: #FFFFFF;
     display: flex;
     flex-direction: column;
