--- a/src/components/Molecules/Card/BodyCard/BodyCard.css
+++ b/src/components/Molecules/Card/BodyCard/BodyCard.css
@@ -30,3 +30,20 @@
     text-align: center;
     margin-bottom: 29px;
 }
+
+.bodyCardWithoutBorder {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    margin-bottom: 29px;
+
+}
+
+.bodyCardWorkerHorizontal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 29px;
+}
